# cie-middleware-linux

./: .cproject  .cproject.REMOVED.git-id  .gitattributes  .gitattributes.REMOVED.git-id  .gitignore  .gitignore.REMOVED.git-id  .project  .project.REMOVED.git-id  .travis-backup.yml.REMOVED.git-id  .travis.yml  .travis.yml.REMOVED.git-id  AUTHORS  CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  FindDpkgBuildFlags.cmake.REMOVED.git-id  LICENSE  LICENSE.REMOVED.git-id  License.txt.REMOVED.git-id  Makefile.REMOVED.git-id  README.Linux  README.Linux.REMOVED.git-id  README.md  README.md.REMOVED.git-id  VERSION  appveyor.yml.REMOVED.git-id  cie-middleware-prj.dbp  cie-middleware-prj.dbp.REMOVED.git-id  cie-middleware.spec  cie-middleware.spec.REMOVED.git-id  ciepki.pc.in  dsigservice.dbp  dsigservice.dbp.REMOVED.git-id  makedist  makedist.REMOVED.git-id  makedist.sh  makedist.sh.REMOVED.git-id  sources.mk.REMOVED.git-id
CIEID/: .classpath  .classpath.REMOVED.git-id  .gitignore  .gitignore.REMOVED.git-id  .project  build.xml  pom.xml  (+2 more)
CSP/: CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  CSP.vcxproj  CSP.vcxproj.REMOVED.git-id  CSP.vcxproj.filters  CSP.vcxproj.filters.REMOVED.git-id  StdAfx.h  StdAfx.h.REMOVED.git-id  custom.manifest.REMOVED.git-id  stdafx.cpp  stdafx.cpp.REMOVED.git-id
CSP/CSP/: CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  CSP.cpp  CSP.cpp.REMOVED.git-id  CSP.h.REMOVED.git-id  CardMod.h  CardMod.h.REMOVED.git-id  ExtAuthKey.cpp  ExtAuthKey.cpp.REMOVED.git-id  IAS.cpp  IAS.cpp.REMOVED.git-id  IAS.h  IAS.h.REMOVED.git-id  NotImpl.cpp  NotImpl.cpp.REMOVED.git-id  StoreProvider.cpp  StoreProvider.cpp.REMOVED.git-id  abilitaCIE.cpp  abilitaCIE.cpp.REMOVED.git-id  abilitaCIE.h  abilitaCIE.h.REMOVED.git-id  cambioPIN.cpp  cambioPIN.cpp.REMOVED.git-id  cambioPIN.h  cambioPIN.h.REMOVED.git-id  sbloccoPIN.cpp  sbloccoPIN.cpp.REMOVED.git-id  sbloccoPIN.h  sbloccoPIN.h.REMOVED.git-id  update.cpp  update.cpp.REMOVED.git-id
CSP/Crypto/: AES.cpp  AES.cpp.REMOVED.git-id  AES.h  AES.h.REMOVED.git-id  ASNParser.cpp  ASNParser.cpp.REMOVED.git-id  ASNParser.h  ASNParser.h.REMOVED.git-id  Base64.cpp  Base64.cpp.REMOVED.git-id  Base64.h  Base64.h.REMOVED.git-id  CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  DES3.cpp  DES3.cpp.REMOVED.git-id  DES3.h  DES3.h.REMOVED.git-id  MAC.cpp  MAC.cpp.REMOVED.git-id  MAC.h  MAC.h.REMOVED.git-id  MD5.cpp  MD5.cpp.REMOVED.git-id  MD5.h  MD5.h.REMOVED.git-id  RSA.cpp  RSA.cpp.REMOVED.git-id  RSA.h  RSA.h.REMOVED.git-id  SHA1.cpp  SHA1.cpp.REMOVED.git-id  SHA1.h.REMOVED.git-id  SHA256.cpp  SHA256.cpp.REMOVED.git-id  SHA512.cpp  SHA512.cpp.REMOVED.git-id  sha256.h  sha256.h.REMOVED.git-id  sha512.h  (+1 more)
CSP/PCSC/: APDU.cpp  APDU.cpp.REMOVED.git-id  CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  CardLocker.cpp  CardLocker.cpp.REMOVED.git-id  CardLocker.h  PCSC.cpp  PCSC.cpp.REMOVED.git-id  PCSC.h  PCSC.h.REMOVED.git-id  Token.cpp  Token.cpp.REMOVED.git-id  Token.h  Token.h.REMOVED.git-id
CSP/PKCS11/: CIEP11Template.cpp  CIEP11Template.cpp.REMOVED.git-id  CIEP11Template.h.REMOVED.git-id  CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  CardContext.cpp  CardContext.cpp.REMOVED.git-id  CardContext.h.REMOVED.git-id  CardTemplate.cpp  CardTemplate.cpp.REMOVED.git-id  CardTemplate.h  CardTemplate.h.REMOVED.git-id  InitP11.h.REMOVED.git-id  Mechanism.cpp  Mechanism.cpp.REMOVED.git-id  Mechanism.h  Mechanism.h.REMOVED.git-id  P11Object.cpp  P11Object.cpp.REMOVED.git-id  P11Object.h  P11Object.h.REMOVED.git-id  PKCS11Functions.cpp  PKCS11Functions.cpp.REMOVED.git-id  PKCS11Functions.h  PKCS11Functions.h.REMOVED.git-id  Slot.cpp  Slot.cpp.REMOVED.git-id  Slot.h  Slot.h.REMOVED.git-id  initP11.cpp  initP11.cpp.REMOVED.git-id  session.cpp  session.cpp.REMOVED.git-id  session.h  session.h.REMOVED.git-id
CSP/UI/: AtlBitmapSkinButton.h  AtlBitmapSkinButton.h.REMOVED.git-id  Bitmap.cpp  Bitmap.cpp.REMOVED.git-id  Bitmap.h  Bitmap.h.REMOVED.git-id  CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  Message.cpp  Message.cpp.REMOVED.git-id  Message.h  Message.h.REMOVED.git-id  PIN.cpp  PIN.cpp.REMOVED.git-id  PIN.h  PIN.h.REMOVED.git-id  SystemTray.cpp  SystemTray.cpp.REMOVED.git-id  SystemTray.h  SystemTray.h.REMOVED.git-id  VCEdit.h  VCEdit.h.REMOVED.git-id  Verifica.cpp  Verifica.cpp.REMOVED.git-id  Verifica.h  Verifica.h.REMOVED.git-id  atlcontrols.h  atlcontrols.h.REMOVED.git-id  helper.cpp  helper.cpp.REMOVED.git-id  helper.h  helper.h.REMOVED.git-id  safeDesktop.cpp  safeDesktop.cpp.REMOVED.git-id  safeDesktop.h  safeDesktop.h.REMOVED.git-id
CSP/Util/: Array.cpp  Array.cpp.REMOVED.git-id  Array.h  Array.h.REMOVED.git-id  CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  IniSettings.cpp  IniSettings.cpp.REMOVED.git-id  IniSettings.h.REMOVED.git-id  ModuleInfo.cpp  ModuleInfo.cpp.REMOVED.git-id  SyncroEvent.cpp  SyncroEvent.cpp.REMOVED.git-id  SyncroEvent.h.REMOVED.git-id  SyncroMutex.cpp  SyncroMutex.cpp.REMOVED.git-id  SyncroMutex.h  SyncroMutex.h.REMOVED.git-id  TLV.cpp  TLV.cpp.REMOVED.git-id  TLV.h  TLV.h.REMOVED.git-id  Thread.cpp  Thread.cpp.REMOVED.git-id  Thread.h  Thread.h.REMOVED.git-id  UtilException.cpp  UtilException.cpp.REMOVED.git-id  UtilException.h.REMOVED.git-id  defines.h  defines.h.REMOVED.git-id  funccallinfo.cpp  funccallinfo.cpp.REMOVED.git-id  funccallinfo.h  funccallinfo.h.REMOVED.git-id  log.cpp  log.cpp.REMOVED.git-id  log.h  log.h.REMOVED.git-id  tinyxml2.cpp.REMOVED.git-id  (+5 more)
CSP/res/: Background.bmp.REMOVED.git-id  Background.pdn.REMOVED.git-id  Button.pdn.REMOVED.git-id  CIE.ico.REMOVED.git-id  CIEPKI.rc.REMOVED.git-id  CIE_.ico.REMOVED.git-id  Cancel.bmp.REMOVED.git-id  Cancel2.bmp.REMOVED.git-id  OK.bmp.REMOVED.git-id  OK2.bmp.REMOVED.git-id  bitmap1.bmp.REMOVED.git-id  img.png.REMOVED.git-id  logo.png.REMOVED.git-id  resource.h  resource.h.REMOVED.git-id
CacheLib/: CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  CacheLib.cpp  CacheLib.cpp.REMOVED.git-id  CacheLib.h.REMOVED.git-id  CacheLib.vcxproj.REMOVED.git-id  CacheLib.vcxproj.filters.REMOVED.git-id  ReadMe.txt.REMOVED.git-id  stdafx.cpp.REMOVED.git-id  stdafx.h  stdafx.h.REMOVED.git-id
(+1032 files in other folders)
